fix(frontend): Align destination details

--- a/ViajeHonesto/angular/src/app/destinations/destinations-list/destinations-list.component.scss
+++ b/ViajeHonesto/angular/src/app/destinations/destinations-list/destinations-list.component.scss
@@ -215,6 +215,11 @@
 
       i {
         color: #007bff;
+        width: 20px;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        margin-right: 0.5rem;
       }
     }
 
